-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7
-
Component/s: security-libs
-
b12
-
generic
-
generic
-
Not verified
All of the security native libraries have runtime dependencies on libjava and libjvm, most of which are completely unnecessary. This CR proposes to remove these dependencies and provide localized versions of the trivial utility functions that are being used from libjava, i.e. the JNU_ThrowXXX functions.
There is also a dependency on JNI_GetCreatedJavaVMs which can easily be removed by caching a reference to the JavaVM when the library is loaded, in JNI_OnLoad, and making this reference available within the library itself.
There is also a dependency on JNI_GetCreatedJavaVMs which can easily be removed by caching a reference to the JavaVM when the library is loaded, in JNI_OnLoad, and making this reference available within the library itself.